--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,10 @@
 [tool.ruff]
 line-length = 100
 
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
+
